[tool.poetry]
name = "openaev-teams-injector"
version = "2.0.14"
description = "An injector for Microsoft Teams"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "teams" }
]


[tool.poetry.dependencies]
python = "^3.11"
requests = "2.32.3"
pyoaev = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "2.0.14", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]
injector_common = { path = "../injector_common", develop = true }

[tool.poetry.extras]
prod = ["pyoaev"]
dev = ["pyoaev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_local_folder = ["teams"]

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
