[project]
name = "openaev-teams-injector"
version = "2.2.0"
description = "An injector for Microsoft Teams"
readme = "README.md"
authors = [{ name = "Filigran", email = "contact@filigran.io" }]
license = "Apache-2.0"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyoaev (==2.2.0); extra != 'dev'",
    "injector_common @ ../injector_common",
    "requests~=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.poetry]
packages = [
    { include = "teams" }
]

[tool.poetry.dependencies]
pyoaev = [
    { markers = "extra != 'dev'", source = "PyPI" },
    { markers = "extra == 'dev'", develop = true },
]
injector_common = { develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_local_folder = ["teams"]

[tool.cmw]
install-command = "poetry install"
config-dump-command = "poetry run python -m teams.openaev_teams --dump-config-schema"
icon-path = "teams/img/icon-teams.png"
